--- a/index.html
+++ b/index.html
@@ -4,15 +4,37 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Carousel Practice</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <!-- <div class="container-fluid"></div> -->
+          <img src="img/trees.jpeg" class="img-fluid" alt="...">
+        
+        </div>
+        <div class="carousel-item">
+          <img src="img/chainsaw.jpeg" class="img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/cutting.jpeg" class="img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/building.jpeg" class="img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/house.jpeg" class="img-fluid" alt="...">
+        </div>
+      </div>
+    </div>
+  </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
