--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <div class="carousel-item">
             <img src="img/chainsaw.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Chainsaw</h5>
+              <h5>Cutting down trees</h5>
               
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/cutting2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Cutting down a tree</h5>
+              <h5>Cutting lumber</h5>
               
             </div>
           </div>
